// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ratings render empty list 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "flex-start",
        "marginBottom": 23.314285714285713,
        "marginHorizontal": 23.314285714285713,
        "marginTop": 23.314285714285713,
      }
    }
  />
</View>
`;

exports[`ratings renders correctly 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "flex-start",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "flex-start",
        "marginBottom": 23.314285714285713,
        "marginHorizontal": 23.314285714285713,
        "marginTop": 23.314285714285713,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#1A1D1E",
          "borderColor": "#35393F",
          "borderRadius": 7.285714285714286,
          "borderStyle": "solid",
          "borderWidth": 1.457142857142857,
          "elevation": 3.934285714285714,
          "flexDirection": "row",
          "height": 26.228571428571428,
          "justifyContent": "center",
          "marginEnd": "2%",
          "paddingHorizontal": 10.2,
          "shadowColor": "#40000000",
          "shadowOffset": Object {
            "height": 3.934285714285714,
            "width": 0,
          },
          "shadowRadius": 7.285714285714286,
        }
      }
    >
      <SvgMock
        style={
          Object {
            "marginEnd": 10.2,
          }
        }
      />
      <Text
        style={
          Object {
            "color": "#FFFFFF",
            "fontFamily": "ProximaNova-Regular",
            "fontSize": 12,
            "fontWeight": "600",
            "letterSpacing": 0.13,
          }
        }
      >
        Premium
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#1A1D1E",
          "borderColor": "#35393F",
          "borderRadius": 7.285714285714286,
          "borderStyle": "solid",
          "borderWidth": 1.457142857142857,
          "elevation": 3.934285714285714,
          "flexDirection": "row",
          "height": 26.228571428571428,
          "justifyContent": "center",
          "marginEnd": "2%",
          "paddingHorizontal": 10.2,
          "shadowColor": "#40000000",
          "shadowOffset": Object {
            "height": 3.934285714285714,
            "width": 0,
          },
          "shadowRadius": 7.285714285714286,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#FFFFFF",
            "fontFamily": "ProximaNova-Regular",
            "fontSize": 12,
            "fontWeight": "600",
            "letterSpacing": 0.13,
          }
        }
      >
        18+
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#1A1D1E",
          "borderColor": "#35393F",
          "borderRadius": 7.285714285714286,
          "borderStyle": "solid",
          "borderWidth": 1.457142857142857,
          "elevation": 3.934285714285714,
          "flexDirection": "row",
          "height": 26.228571428571428,
          "justifyContent": "center",
          "marginEnd": "2%",
          "paddingHorizontal": 10.2,
          "shadowColor": "#40000000",
          "shadowOffset": Object {
            "height": 3.934285714285714,
            "width": 0,
          },
          "shadowRadius": 7.285714285714286,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#FFFFFF",
            "fontFamily": "ProximaNova-Regular",
            "fontSize": 12,
            "fontWeight": "600",
            "letterSpacing": 0.13,
          }
        }
      >
        U/A
      </Text>
    </View>
  </View>
</View>
`;
